# speak_ros_voicevox_plugin

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  plugins.xml
.github/workflows/: build_test.yaml
include/speak_ros_voicevox_plugin/: voicevox_plugin.hpp
src/: speak_ros_voicevox_plugin.cpp
