<?xml version="1.0"?>
<package format="3">
    <name>speak_ros_voicevox_plugin</name>
    <version>0.0.1</version>
    <description>open-voicevox plugin for speak_ros</description>

    <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
    <author email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</author>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>s

    <depend>speak_ros</depend>
    <depend>rclcpp</depend>
    <depend>pluginlib</depend>
    <depend>libcpprest-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <speak_ros plugin="${prefix}/plugins.xml" />
    </export>
</package>
